# vault

./: Cargo.toml  README.md
src/: cli.rs  main.rs  model.rs  store.rs
src/store/: compression.rs  crypto.rs
tests/: integration.rs
