[package]
name = "vault"
version = "0.1.3"
edition = "2021"
description = "A key value tool to persist your passwords"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabled = "*"
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[profile.release]
strip=true
opt-level="z"
lto=true
panic = "abort"
