[package]
name = "syk"
version = "0.2.0"
edition = "2021"
description = "A key value tool to persist your passwords"
authors = ["Julio Gardona <jcbritobr@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jgardona/syk"
license = "MIT"
keywords = ["storage", "key", "crypto", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabled = "0.14.0"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
flate2 = "1.0.28"
aes-gcm = "0.10.3"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
anyhow = "1.0.75"

[profile.release]
strip=true
opt-level="z"
lto=true
panic = "abort"
